--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
     <section id="main-bio">
 
-        <h2>Your Name</h2>
+        <h2>Rudy Torres</h2>
 
         <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
 
-        <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus alias, aspernatur consequatur dignissimos ea eligendi error fugit impedit modi natus odit perferendis perspiciatis possimus sequi sit tempora totam! Ab ad cum cupiditate ea enim, error explicabo fugiat impedit maiores minima neque numquam obcaecati, odit quaerat quas quisquam repellat sed tempora tenetur vel. Ad facere fugit inventore magnam molestias quasi quos veniam! Accusantium, aperiam assumenda consectetur consequatur culpa cum cupiditate debitis deleniti dolor dolore dolorem ea enim error explicabo facilis harum hic impedit incidunt iusto maxime modi neque nobis nostrum perspiciatis placeat provident quas qui quia quos reiciendis repellat repellendus tenetur voluptas. Aliquam, aliquid at commodi dignissimos doloremque est eveniet fugiat incidunt inventore laborum maxime minima minus modi neque officiis omnis, quas quasi qui quia, quidem quos reiciendis reprehenderit tenetur. Adipisci asperiores cum doloremque, enim in inventore nemo nobis perspiciatis recusandae reprehenderit veniam veritatis! Eligendi illum ipsa tempore ullam voluptates? <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
     </section>
 
     <section id="contact-info">
         <h2>Contact Info</h2>
         <ul>
-            <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-            <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+            <li><strong>Email:</strong> <a href="#">rudyt@uci.edu</a></li>
+            <li><strong>Github:</strong> <a href="#">rudytorres714.github.io</a></li>
             <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
         </ul>
     </section>
